fix busca de transação por categoria